feat: Generate Google.Apis.FirebaseAppDistribution.v1alpha version 1.69.0.3690

--- a/DiscoveryJson/firebaseappdistribution.v1alpha.json
+++ b/DiscoveryJson/firebaseappdistribution.v1alpha.json
@@ -776,7 +776,7 @@
       }
     }
   },
-  "revision": "20250123",
+  "revision": "20250207",
   "rootUrl": "https://firebaseappdistribution.googleapis.com/",
   "schemas": {
     "AndroidxCrawlerOutputPoint": {
@@ -907,11 +907,6 @@
       "description": "Instructions for AI driven test",
       "id": "GoogleFirebaseAppdistroV1alphaAiInstructions",
       "properties": {
-        "appDescription": {
-          "deprecated": true,
-          "description": "Optional. Describes the app to give the AI some context",
-          "type": "string"
-        },
         "steps": {
           "description": "Required. Steps to be accomplished by the AI",
           "items": {
@@ -1402,7 +1397,8 @@
             "APP_NAME_TOO_LONG",
             "AAB_DEVELOPER_ACCOUNT_NOT_LINKED",
             "AAB_NO_APP_WITH_GIVEN_PACKAGE_NAME_IN_ACCOUNT",
-            "AAB_UPLOAD_ERROR"
+            "AAB_UPLOAD_ERROR",
+            "APP_NOT_FOUND"
           ],
           "enumDescriptions": [
             "",
@@ -1426,7 +1422,8 @@
             "",
             "",
             "",
-            ""
+            "",
+            "Happens if the Firebase app no longer exists by the time of extraction"
           ],
           "type": "string"
         },
