feat: Generate Google.Apis.FirebaseManagement.v1beta1 version 1.69.0.3714

--- a/DiscoveryJson/firebase.v1beta1.json
+++ b/DiscoveryJson/firebase.v1beta1.json
@@ -1324,7 +1324,7 @@
       }
     }
   },
-  "revision": "20250113",
+  "revision": "20250303",
   "rootUrl": "https://firebase.googleapis.com/",
   "schemas": {
     "AddFirebaseRequest": {
@@ -2152,7 +2152,7 @@
       "id": "StatusProto",
       "properties": {
         "canonicalCode": {
-          "description": "The canonical error code (see codes.proto) that most closely corresponds to this status. This may be missing, and in the common case of the generic space, it definitely will be. copybara:strip_begin(b/383363683) copybara:strip_end_and_replace optional int32 canonical_code = 6;",
+          "description": "copybara:strip_begin(b/383363683) copybara:strip_end_and_replace optional int32 canonical_code = 6;",
           "format": "int32",
           "type": "integer"
         },
@@ -2170,7 +2170,7 @@
           "description": "message_set associates an arbitrary proto message with the status. copybara:strip_begin(b/383363683) copybara:strip_end_and_replace optional proto2.bridge.MessageSet message_set = 5;"
         },
         "space": {
-          "description": "The following are usually only present when code != 0 Space to which this status belongs copybara:strip_begin(b/383363683) copybara:strip_end_and_replace optional string space = 2;",
+          "description": "copybara:strip_begin(b/383363683) Space to which this status belongs copybara:strip_end_and_replace optional string space = 2; // Space to which this status belongs",
           "type": "string"
         }
       },
