feat: Generate Google.Apis.FirebaseManagement.v1beta1 version 1.69.0.3730

--- a/DiscoveryJson/firebase.v1beta1.json
+++ b/DiscoveryJson/firebase.v1beta1.json
@@ -1324,7 +1324,7 @@
       }
     }
   },
-  "revision": "20250314",
+  "revision": "20250319",
   "rootUrl": "https://firebase.googleapis.com/",
   "schemas": {
     "AddFirebaseRequest": {
@@ -1919,6 +1919,7 @@
       "type": "object"
     },
     "MessageSet": {
+      "description": "LINT.ThenChange( //depot/google3/third_party/protobuf/github/src/google/protobuf/bridge/message_set.proto ) This is proto2's version of MessageSet.",
       "id": "MessageSet",
       "properties": {},
       "type": "object"
