--- a/DiscoveryJson/config.v1.json
+++ b/DiscoveryJson/config.v1.json
@@ -143,6 +143,12 @@
                 "name"
               ],
               "parameters": {
+                "extraLocationTypes": {
+                  "description": "Optional. A list of extra location types that should be used as conditions for controlling the visibility of the locations.",
+                  "location": "query",
+                  "repeated": true,
+                  "type": "string"
+                },
                 "filter": {
                   "description": "A filter to narrow down results to a preferred subset. The filtering language accepts strings like `\"displayName=tokyo\"`, and is documented in more detail in [AIP-160](https://google.aip.dev/160).",
                   "location": "query",
@@ -1187,7 +1193,7 @@
       }
     }
   },
-  "revision": "20250219",
+  "revision": "20250409",
   "rootUrl": "https://config.googleapis.com/",
   "schemas": {
     "ApplyResults": {
